--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="col-12 d-flex justify-content-center">
             <div class=" row mb-2 pt-5  ">
                 <div class="blockquote">
-                    <span class="label danger">Search recipes for your favourite ingredient!</span>
+                    <span class="label danger">Hurry! Search your favourite recipe with us now!</span>
                 </div>
             </div>
         </div>
@@ -53,9 +53,10 @@
         <!-- Receipes start here -->
 
         <!-- Card -->
-        <div class="recipes "></div>
+        <div class="recipes " id="divTask"></div>
         <!-- Optional JavaScript; choose one of the two! -->
-        <script src="./js/index.js" type='text/javascript'></script>
+        <script async src="./js/index.js" type='text/javascript'></script>
+        <script  src="./js/localStorage.js" type='text/javascript'></script>
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
