--- a/index.html
+++ b/index.html
@@ -38,25 +38,31 @@
                     <form class="form-inline search-form">
                         <div class="input-group">
                             <div class="input-group-prepend ">
-                                <span class="input-group-text search-button" id="basic-addon1"><i
-                                        class="fas fa-search fa-2x"></i></span>
+                                <span class="input-group-text search-button" id="basic-addon1">
+                                    <i class="fas fa-search fa-2x"></i>
+                                </span>
                             </div>
                             <input type="text" class="form-control search-form-textbox" placeholder="Search"
                                 aria-label="Username" aria-describedby="basic-addon1">
+                            <span class="input-group-text search-button" id="basic-addon1">
+                                <i class="fas fa-download"></i>
+                            </span>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+
         <!-- /Search form  -->
 
         <!-- Receipes start here -->
 
         <!-- Card -->
-        <div class="recipes " id="divTask"></div>
+        <div class="recipes pb-5" id="divTask"></div>
         <!-- Optional JavaScript; choose one of the two! -->
+        <script src="./js/localStorage.js" type='text/javascript'></script>
         <script async src="./js/index.js" type='text/javascript'></script>
-        <script  src="./js/localStorage.js" type='text/javascript'></script>
+
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
